--- a/scss/templates/flexTemplate.scss
+++ b/scss/templates/flexTemplate.scss
@@ -1,6 +1,34 @@
+@import "../variables/Colors";
 
-%displayFlex-alignItems-spaceBetween {
+
+%displayFlex-alignItemsCenter-spaceBetween {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
+%displayFlex-center-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+%button__round_active {
+  background-color: $buttonBackgroundColor;
+
+}
+
+%button__round {
+  padding: 10px 36px;
+  border: 1px solid #FFFFFF;
+  border-radius: 50%;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 22px;
+  text-align: center;
+  letter-spacing: 0.2px;
+  color: $firstColor;
+}
+
+
+
