--- a/scss/variables/Colors.scss
+++ b/scss/variables/Colors.scss
@@ -1,9 +1,9 @@
 $firstColor: #FFFFFF;
 $secondColor: #737373;
-$buttonBackgroundColor: #23A6F0;
+  $buttonBackgroundColor: #23A6F0;
 $secondBackgroundColor: #F7F7F7;
 $colorLabelText: #252B42;
 $colorInputText: #737373;
 $black-TitleColor: #252B42;
-
-
+$backgroundSectionColor: #FAFAFA;
+$darkBackgroundColor: #252B42;
